@@ -114,7 +114,7 @@ Jakob <jakob@pipefour.org>
         elvi: pasearch
 
 Kyle Isom <coder@kyleisom.net>
-        elvi: cablesearch, duckduckgo, openports
+        elvi: cablesearch, duckduckgo, openports, wolfram
 	plus fixes.
 
 Jason Ryan <jasonwryan@gmail.com>
