@@ -1,0 +1,41 @@
+#!/bin/sh
+# elvis: wolfram	-- Ask questions of the computational knowledge engine
+# coder@kyleisom.net 20110105
+. surfraw || exit 1
+
+w3_config_hook () {
+    def     SURFRAW_wolfram_results             "$SURFRAW_results"
+    def     SURFRAW_wolfram_base_url            "www.wolframalpha.com/"
+    def     SURFRAW_wolfram_search              search
+    def     SURFRAW_wolfram_params              "input/?i="
+}
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+  Surfraw search the web using wolfram (www.wolfram.com)
+Local options:
+    (null) 
+EOF
+    w3_global_usage
+}
+
+w3_parse_option_hook () {
+    opt="$1"
+    optarg="$2"
+    case "$opt" in
+    *) return 1 ;;
+    esac
+    return 0
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+
+SURFRAW_wolfram_base_url="http://${SURFRAW_wolfram_base_url}"
+
+escaped_args=`w3_url_of_arg $w3_args`
+
+w3_browse_url "${SURFRAW_wolfram_base_url}${SURFRAW_wolfram_params}${escaped_args}"
