@@ -105,6 +105,7 @@ elvi.1sr.gz @mandir@/man1/webster.1sr.gz
 elvi.1sr.gz @mandir@/man1/wetandwild.1sr.gz
 elvi.1sr.gz @mandir@/man1/wikipedia.1sr.gz
 elvi.1sr.gz @mandir@/man1/woffle.1sr.gz
+elvi.1sr.gz @mandir@/man1/wolfram.1sr.gz
 elvi.1sr.gz @mandir@/man1/worldwidescience.1sr.gz
 elvi.1sr.gz @mandir@/man1/yahoo.1sr.gz
 elvi.1sr.gz @mandir@/man1/yandex.1sr.gz
