@@ -1,3 +1,8 @@
+2011-09-09 Kyle Isom
+        * New elvi: wolfram - query Wolfram Alpha
+        * Author: Kyle Isom <coder@kyleisom.net>
+        * Added test for wolfram.
+
 2011-08-09  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvi: priberam - search Portuguese dictionary.
